--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -5,9 +5,10 @@
 .form input {
     flex: 1; /* 버튼을 뺀 빈 공간을 모두 채워줍니다 */
     font-size: 1.25rem;
+    background : rgba(0, 0, 0, 0.09);
     outline: none;
     border: none;
-    border-bottom: 1px solid #c5f6fa;
+    
 }
 
 .create-button {
@@ -16,7 +17,7 @@
     padding-left: 1rem;
     padding-right: 1rem;
     margin-left: 1rem;
-    background: #22b8cf;
+    background : rgba(0, 0, 0, 0.09);
     border-radius: 3px;
     color: white;
     font-weight: 600;
@@ -24,5 +25,5 @@
 }
 
 .create-button:hover {
-    background: #3bc9db;
+    background : rgba(0, 0, 0, 0.2);
 }
