--- a/src/components/TodoListTemplate.css
+++ b/src/components/TodoListTemplate.css
@@ -1,25 +1,49 @@
 .todo-list-template {
-    background: white;
-    width: 512px;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); /* 그림자 */ 
-    margin: 0 auto; /* 페이지 중앙 정렬 */
-    margin-top: 4rem;
-  }
+  background: linear-gradient(to right, #9CCDAA, #FBE0A4);
+  width: 512px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); /* 그림자 */ 
+  margin: 0 auto; /* 페이지 중앙 정렬 */
+  margin-top: 4rem;
+}
+.title {
+  /*padding: 2rem;*/
+  font-size: 2.5rem;
+  /*text-align: center;*/
+  font-weight: 100;
+  background: #6CAF8A;
+  color: white;
+}
+.top-bar {
+  display: flex;
+  height: 25px;
+  font-size: 1rem;
+  align-items: center;
+  padding-left: 5px;
+  padding-right: 5px;
+
+}
+.top-bar-item:nth-child(1) {
+  flex: 1;
+}
+.top-bar-item:nth-child(2) {
+  text-align: center;
+  flex: 1;
+}
+.top-bar-item:nth-child(3) {
+  text-align: end;
+  flex: 1;
+}
+.top-icon {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+
+.form-wrapper {
+  padding: 1rem;
   
-  .title {
-    padding: 2rem;
-    font-size: 2.5rem;
-    text-align: center;
-    font-weight: 100;
-    background: #22b8cf;;
-    color: white;
-  }
-  
-  .form-wrapper {
-    padding: 1rem;
-    border-bottom: 1px solid #22b8cf;
-  }
-  
-  .todos-wrapper {
-    min-height: 5rem;
-  }
+}
+.todos-wrapper {
+  min-height: 5rem;
+}
